k8s/15-mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: relativa
  labels:
    app.kubernetes.io/name: mailhog
    app.kubernetes.io/part-of: relativa
    app.kubernetes.io/component: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mailhog
      app.kubernetes.io/part-of: relativa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailhog
        app.kubernetes.io/part-of: relativa
        app.kubernetes.io/component: mail
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:v1.0.1
          ports:
            - name: smtp
              containerPort: 1025
            - name: http
              containerPort: 8025
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: smtp
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: smtp
            initialDelaySeconds: 10
            periodSeconds: 20
