k8s/34-graph-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph
  namespace: relativa
  labels:
    app.kubernetes.io/name: graph
    app.kubernetes.io/part-of: relativa
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: graph
      app.kubernetes.io/part-of: relativa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: graph
        app.kubernetes.io/part-of: relativa
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: graph
          image: ghcr.io/kostenuksoft/relativa-graph:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 384Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
