k8s/14-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: relativa
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: relativa
    app.kubernetes.io/component: broker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: relativa
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
    - name: management
      port: 15672
      targetPort: management
