k8s/51-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: relativa
  labels:
    app.kubernetes.io/name: client
    app.kubernetes.io/part-of: relativa
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: client
    app.kubernetes.io/part-of: relativa
  ports:
    - name: http
      port: 3000
      targetPort: http
